# Core_Rank03_call_me_maybe

./: .gitignore  Makefile  README.md  call_me_maybe.py  pyproject.toml  requirements.txt  visualizer.py  web_app.py
data/input/: function_calling_tests.json  functions_definition.json  test_functions.json  test_prompt.json  test_prompts.json
data/output/: function_calling_results.json  test_results.json
llm_sdk/: __init__.py
llm_sdk/llm_sdk/: __init__.py:Zone.Identifier
moulinette/moulinette/: function_calling_results.json
src/: ConstrainDecoder.py  DefinedFunctionTokenizer.py  PromptGenerator.py  PromptManager.py  __main__.py  constrain_decoder.py  custom_errors.py  demo.txt  helper_functions.py  main.py  parser.py  prompt_generator.py  token_encode_decode.py  token_generator.py  tokenizer.py
