[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "memory-profiler>=0.61.0",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
